...
        layout="@layout/top_bar"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/Exhibit_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="250dp"
        android:inputType="text"
...
        android:id="@+id/path_to_exhibit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/lat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mock_btn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginBottom="40dp"
        android:onClick="onMockPressed"
        android:text="Mock"
        app:layout_constraintBottom_toTopOf="@+id/next_bttn"
        app:layout_constraintStart_toStartOf="@+id/path_to_exhibit" />

    <Button
        android:id="@+id/prev_bttn"
        android:layout_width="80dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skip_bttn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Skip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
...
        android:layout_marginBottom="8dp"
        android:hint="Latitude"
        android:textIsSelectable="true"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/lon"
        app:layout_constraintStart_toStartOf="@+id/path_to_exhibit" />

    <EditText
        android:id="@+id/lon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.913" />

    <Button
        android:id="@+id/clear_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:onClick="onClearPlanPressed"
        android:backgroundTint="@color/green_700"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />
</androidx.constraintlayout.widget.ConstraintLayout>

...
