...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/selected"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="-24dp"
        android:buttonTint="@color/green_500"
        app:layout_constraintBottom_toBottomOf="@+id/exhibit_name"
        app:layout_constraintStart_toEndOf="@+id/exhibit_name"
...
